--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,20 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 entitymanager.packagesToScan=com.oneterrace.taskmanagement.model
 
-server.host=http://localhost
+#server.host=http://localhost
 server.port=8080
+
+
+#SPRING OAUTH2 CONFIG
+security.oauth2.client.token.jwt_key=JWTKey@123
+security.oauth2.client.grant_type=password
+security.oauth2.client.authorization_code=authorization_code
+security.oauth2.client.refresh_token=refresh_token
+security.oauth2.client.implicit=implicit
+security.oauth2.client.scope.read=read
+security.oauth2.client.scope.write=write
+security.oauth2.client.scope.trust=trust
+security.oauth2.client.accessTokenValiditySeconds=7200
+security.oauth2.client.refreshTokenValiditySeconds=7200
+security.oauth2.client.id=client-id
+security.oauth2.client.password=client-password
